# Product-Intel-Agent

./: .env.local  .gitignore  Dockerfile  Makefile  README.md  badbadllm.md  pyproject.toml
agent/: agent.py  fast_api_app.py
agent/app_utils/: env.py
agent/docs/: my_product_spec.md
agent/tools/: mcp_config.py
agent/tools/web_scraper_mcp/: knowledge_base_server.py  requirements.txt  scraper_server.py  search_server.py
deployment/terraform/: main.tf
